removal: POM comment lines and space